# imbox

./: .env.example  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  example.py  go.py  mise.toml  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: python-app.yml
imbox/: __init__.py  __init__.pyi  cli.py  commands.py  imap.py  imap.pyi  imap_utf7.py  imbox.py  imbox.pyi  logger.py  messages.py  messages.pyi  output.py  parser.py  parser.pyi  parser.py~  query.py  query.pyi  settings.py  utils.py  utils.pyi  version.py
imbox/share/python-wheels/: CacheControl-0.12.6-py2.py3-none-any.whl  appdirs-1.4.3-py2.py3-none-any.whl  certifi-2019.11.28-py2.py3-none-any.whl  chardet-3.0.4-py2.py3-none-any.whl  colorama-0.4.3-py2.py3-none-any.whl  contextlib2-0.6.0-py2.py3-none-any.whl  distlib-0.3.0-py2.py3-none-any.whl  distro-1.4.0-py2.py3-none-any.whl  html5lib-1.0.1-py2.py3-none-any.whl  idna-2.8-py2.py3-none-any.whl  ipaddr-2.2.0-py2.py3-none-any.whl  lockfile-0.12.2-py2.py3-none-any.whl  msgpack-0.6.2-py2.py3-none-any.whl  packaging-20.3-py2.py3-none-any.whl  pep517-0.8.2-py2.py3-none-any.whl  pip-20.0.2-py2.py3-none-any.whl  pkg_resources-0.0.0-py2.py3-none-any.whl  progress-1.5-py2.py3-none-any.whl  pyparsing-2.4.6-py2.py3-none-any.whl  pytoml-0.1.21-py2.py3-none-any.whl  requests-2.22.0-py2.py3-none-any.whl  retrying-1.3.3-py2.py3-none-any.whl  setuptools-44.0.0-py2.py3-none-any.whl  six-1.14.0-py2.py3-none-any.whl  urllib3-1.25.8-py2.py3-none-any.whl  webencodings-0.5.1-py2.py3-none-any.whl  wheel-0.34.2-py2.py3-none-any.whl
imbox/tests/: test_parser.py  test_query.py
imbox/vendors/: __init__.py  __init__.pyi  gmail.py  gmail.pyi  helpers.py
mailbox/: __init__.py  imap.py  parser.py
tests/: 8422.msg  parser_tests.py  query_tests.py  test_parser.py
